tests/err_str_esc02.json.err
Parse error at line 1

001: ["a\x"]
          ^
Invalid escape \x
